--- a/React-forms-validation/src/formInputs.css
+++ b/React-forms-validation/src/formInputs.css
@@ -24,6 +24,10 @@ span {
     display: none;
 }
 
-input:invalid ~ span {
+input:invalid[focused="true"] {
+    border: 1px solid rgb(165, 2, 57);
+}
+
+input:invalid[focused="true"] ~ span {
     display: block;
 }
